--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
 				"--timeout",
 				"999999",
 				"--colors",
-				"${workspaceFolder}/compiled/tests"
+				"${workspaceFolder}/compiled/tests/**/*.mjs"
 			],
 			"internalConsoleOptions": "openOnSessionStart",
 			"name": "Mocha Tests",
