--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,12 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
+			"command": "npx playwright test CI=true modules/end-to-end-tests",
+			"name": "Playwright tests",
+			"request": "launch",
+			"type": "node-terminal",
+		},
+		{
 			"args": [
 				"-u",
 				"tdd",
